# OSDesign

./: CMakeLists.txt  readme.md
config/: config.ini
src/: main.cpp
test/: config.ini  main  result.txt  test.sh
test/LMutexTest/: CMakeLists.txt  mutextest.cpp
